Closed Bug 153828 Opened 23 years ago Closed 23 years ago

unable to edit bookmarks (delete, rename, add folder etc.) when bookmark window is maximised

Categories

(SeaMonkey :: Bookmarks & History, defect, P2)

x86
All

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: jtilak1, Assigned: bryner)

References

Details

(Keywords: regression, Whiteboard: [adt1 RTM] [ETA 08/07])

Attachments

(2 files)

1.goto any site 2.bookmark the site 3.goto bookmark manager 4.select the bookmark 5.hit the delete key. nothing happens (it is not deleted) 6.click delete on toolbar. nothing happens (it is not deleted) 7.goto the edit menu and click delete. nothing happens again. 8.keep hitting the delete key really hard because your **** off by now. you can actually hear mozilla laughing at you. i have only had this problem with recent nightly builds (trunk) build id: 2002062308
I've followed the steps using 20020624 and the bug is reproducible as described just before the delete button and context menu worked in 20020621
Status: UNCONFIRMED → NEW
Ever confirmed: true
This error also appears in the JS console: Error: [Exception... "Component returned failure code: 0x80070057 (NS_ERROR_ILLEGAL_VALUE) [nsITreeView.isContainer]" nsresult: "0x80070057 (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame :: <unknown filename> :: BMOLController_isCommandEnabled :: line 48" data: no] Source File: Line: 48 It seems that to reproduce the problem the bookmark manager needs to be closed when adding the bookmark and then when you open it you won't be able to delete the bookmark.
Keywords: regression
other problems with bookmark manager that i think may be related because i noticed they appeared at the same time as this bug: i cannot create new folders anymore. and i cannot get to the bookmark properties dialog to rename or change the url. drag and drop works but i when i right click to cut and paste it wont cut.
possible workaround: try using cut to remove the bookmark. Everything seemed to work fine for me after that.
Sounds like a duplicate of Bug 153271 -- although there's info in the comments of this bug that is not represented there.
Ignore that previous workaround I posted. I've just noticed that changing focus to another window and then returning to the Bookmark Manager always allows me to edit my bookmarks. build id: 2002062308
*** Bug 153271 has been marked as a duplicate of this bug. ***
*** Bug 154181 has been marked as a duplicate of this bug. ***
*** Bug 154858 has been marked as a duplicate of this bug. ***
Workaround method is found on comment 1 of bug 154181... > Currently it seems that it's not possible to do any management > until you switch to another window and back to the management window.
*** Bug 155363 has been marked as a duplicate of this bug. ***
*** Bug 155449 has been marked as a duplicate of this bug. ***
works for me linux build 2002 07 02 04 from a fresh profile. Could anybody: - provide the steps to reproduce the bug from a fresh profile leading to a reproducable problem (please give absolutely all the detailed steps starting from the mozilla execution, specifying if the bookmark panel in sidebar is open or not, which bookmark you try to delete) - attach a bookmarks.html file that exhibits this behaviour Thanks, without that, I can not do more investigations.
I'm the reporter of bug 153271. After changing focus to another Mozilla window and using Ctrl+X instead of the DEL key I often succeed to remove a bookmark.
*** Bug 155825 has been marked as a duplicate of this bug. ***
*** Bug 155960 has been marked as a duplicate of this bug. ***
*** Bug 156031 has been marked as a duplicate of this bug. ***
Build # 0000000000 Periodically I have this problem along with the inability to change properties or rename bookmarks. However, I have yet to find an always duplicatable scenario. I have found that exiting from the menu and going back to manage bookmarks is sort of a work around for the problem.
*** Bug 155913 has been marked as a duplicate of this bug. ***
see also bug 151540
I'd mark Bug #151540 a dup, and change this bugs summary to include Rename/Edit.
*** Bug 156329 has been marked as a duplicate of this bug. ***
changing summary. this bug is only in the trunk, i think. for people that dont read comments: changing focus to another window then back to bookmark manager allows you to edit bookmarks.
Summary: bookmarks wont delete → unable to edit bookmarks (delete, rename, etc.)
This bug is on both the trunk and branch.
*** Bug 156659 has been marked as a duplicate of this bug. ***
like Svante Kleist - NEMESIS systemDesign I was able to find workaround when delete or rename bookmark is not working I did alt+Tab and alt+Tab this way windows switches focus to something (whatever) and another alt+Tab switches focus again to manage bookmarks and than those commands work probably because commands from popup and menus are not sent to manage bookmarks window. this bug may be ms windows specific.
*** Bug 156431 has been marked as a duplicate of this bug. ***
Noticed that this is marked as new, but I can confirm it on Windows, build 2002070813. Workaround did work for me.
*** Bug 157677 has been marked as a duplicate of this bug. ***
*** Bug 157791 has been marked as a duplicate of this bug. ***
build 2002071908, win32-talkback, win98. Could not open bookmark properties. Workaround of switching focus to one window and back allowed me to open the properties. This was found on a freshly unzipped build put into a clean directory. Opened Mozilla, went straight to menu "Bookmarks-->Manage Bookmarks..." and was unable to open the properties to any of my bookmarks (didn't try to delete any) until I switched windows and switched back.
Does this bug have something to do with bug 91884? This was also a problem with focus. Also I don't get js console error messages like Greg L. (3rd message).
*** Bug 158343 has been marked as a duplicate of this bug. ***
This does look similar to Bug #91884, or more correctly Bug #96275 which is intended to fix focus issues properly.
*** Bug 158959 has been marked as a duplicate of this bug. ***
*** Bug 159041 has been marked as a duplicate of this bug. ***
i've seen a similar issue, in that i was not able to edit my bookmarks.html file. my initial thoguht was that it was a profile corruption, so i created a new bookmarks.html, and everything worked ok.
Blocks: 143047
Whiteboard: [adt1 RTM] [ETA Needed]
Keywords: nsbeta1nsbeta1+
I just ran through all the dupes and the reported platforms include Win2k, WinMe, Win98, WinXP, and one MacOS9. Changing OS to all. I'll evaluate Mac and Linux as I test this bug. Friendly reminder to all, please always mention os/platform just as you do build ID, when commenting.
OS: Windows 2000 → All
I can't reproduce this bug with a 20020719 branch build on Win98 - but I couldn't repro it with a 20020711 trunk build either. I only mention that older trunk build because it means my results aren't definitive. Judging by the build dates in the dupes i should be able to repro the error in such a build but I cannot. I think there must be something more to the repro steps (which weakens the case for high priority for this bug). I've monitored bracnh builds closely for quite a while and have not seen this bug. If someone can repro please let me know.
I've just dupped the problem with build 2002072504 on Win98SE. Mind you, I also noticed this in the Javascript console... Warning: reference to undefined property aResource.QueryInterface Source File: chrome://communicator/content/bookmarks/bookmarks.xml#bookmarksBase.resolveType() Line: 2
*** Bug 158926 has been marked as a duplicate of this bug. ***
fyi, bug 83298 will fix these warnings. Iirc these warnings are always hitten when you open the CM unlike the problem reported in this bug that is sporadic and therefore it should be unrelated but I have not investigated. Btw, I have never hit the problem on linux.
Seeing this with 2002072204 Win 98, and have for a couple of weeks.
*** Bug 159573 has been marked as a duplicate of this bug. ***
*** Bug 159577 has been marked as a duplicate of this bug. ***
I still have this bug - I have mozilla: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1b) Gecko/20020726 {build id 2002072608} open mozilla, go to a website, go to bookmarks, try to delete - nothing alt+tab, alt+tab, try to delete - working on top of this I've noticed (on build 2002072104, same platform) that sometimes bookmarks for the webpages are added by themselves or webpage does it but mozilla doesn't prompt me. unrelated: I really miss a small banner sth like "Best viewed with mozilla" and webmaster for mozilla.org hasn't answered my email. Please don't trash bugzilla, answer to my email if you know of a banner I could use for free?
For claudius@netscape.com : I think it's related to the content (or loading speed?) of the pages being browsed. I can't reproduce it with mozilla.org pages. Here are some steps that always reproduce the bug for me (2002072604/Win2KSP2): 1. Start Mozilla and go to http://www.maxim-ic.com/ 2. Open a new window and, from there, go to http://www.lavasoftusa.com/ 3. Open Bookmark Manager and try to delete a bookmark either in root level or inside a folder. It doesn't work as expected, unless you minimize the Bookmark Manager and un-minimize it. If I restart Mozilla and perform the above steps again, the second site is loaded from cache. Again, the bug can be reproduced so it seems neither related to the loading of pages nor the speed of connection (mine is 64Kbps dialup).
Summary: unable to edit bookmarks (delete, rename, etc.) → unable to edit bookmarks (delete, rename, add folder etc.)
Good change of summary as I'd just noticed the problem with adding a folder yesterday (Win98SE build 2002072604-TRUNK). Also, I'm beginning to wonder about comment #47, as changing windows doesn't always seem to fix the problem.
Blocks: 159694
*** Bug 157318 has been marked as a duplicate of this bug. ***
I can't reproduce this bug with my current trunk nightly (20020728 under Windows 2000 SP2).
Dimitrios, I tried the steps you described in Comment 47, but I can't reproduce this bug there either. I'm using a current trunk nightly (20020728 under Windows 2000 SP2).
Updated from build 2002071608 to 2002072804. Running on Win 2k, SP2. Bookmarks still aren't editable until changing windows.
To those not seeing the bug: please try to have bookmarks manager always maximized. I think this is crucial for reproducing the bug. But, well, I might be wrong.
Indeed, it's amazing! I've bookmark-manager always maximized and the bug appeared. de-maximizing doesn't solve the problem. but when restarting mozilla and opening the manager again: it works. you even don't need to restart mozilla. just close manager and reopen in not-maximized-mode. but could be that this is because of the window-changing while closing and reopening! maximize the manager - bug reappears. btw. only for the case you didn't recognize: not only deleting, etc. by mouse is not working with this bug but also interacting with DEL on keyboard. Navigation works with arrow-keys all the time.
To Comment 53: Indeed Dimitrios, when I maximize the bookmark window I can reproduce this bug with the aforementioned build. I propose changing the bug summary: OLD: unable to edit bookmarks (delete, rename, add folder etc.) NEW: unable to edit bookmarks (delete, rename, add folder etc.) when bookmark window is maximized
Summary: unable to edit bookmarks (delete, rename, add folder etc.) → unable to edit bookmarks (delete, rename, add folder etc.) when bookmark window is maximised
Could the bug have something to do with the Bookmark Manager window since a. the bookmark manager had to have been opened maximized b. you have to switch focus to another window and back to start editing BTW, I don't get any error messages in the Javascript console either. I have Mozilla 1.1 Beta (build 2002072104) on Windows 98 SE.
*** Bug 160016 has been marked as a duplicate of this bug. ***
Has anyone reproduced this bug on a _branch_ build yet? I have not been able to repro this bug with a 20020729 branch builds and I have seen no reports to the contrary - although this bug is currently listed as warranting inclusion for the NS release based on said branch(adt keywords).
*** Bug 160135 has been marked as a duplicate of this bug. ***
The bug has still been present in build 2002073004 on Win2k. That is absolutly reproducible in the following way: open bookmark manager (not maximized) - the bug is absent, maximize this - the bug is present, then one can open and close the manager - the bug will be present. One can eliminate that by a consecution of demaximizing, closing and opening the manager's window. The switching of windows by alt+tab can also help over this bug in maximized state of manager.
it's still there Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1b) Gecko/20020730 I can't delete when window IS NOT maximized either I do: open mozilla bookmarks->manage bookmarks (window came up normal NOT MAXIMIZED) right click on bookmark->select delete -> NOTHING maximize window right click on bookmark->select delete -> NOTHING return to normal state (de-maximize it) - still nothing switch windows by pressing alt-tab, alt-tab (twice) delete bookmarks works fine - there's no point checking other commands than delete it won't work. I would change summary to what it was.... should we like wait for a developer to say "I think I fixed it, try now"? I don't think it's going to get solved by itself.... My thinking is that there's something wrong with the event: looks like parent window doesn't send the message to the event handler (or event handler doesn't receive it) until it gets focus again by switching the windows.
In build 2002073008: I can reproduce this bookmark behavior: Click Bookmarks/Manage Bookmarks... If the window is maximized the bookmarks are locked. Click the restore botton. Bookmarks are still locked. Exit Bookmark Manager. Reopen Bookmark Manager. (Window is not full screen.) Bookmarks seem to function well. Whoever noticed the maximized behavior seems to be correct. Note: I also have a good : ) number of bookmarks neatly sorted into multiple folders.
I see this using a branch build from today 2002073006.
Mike Kowalski and others: When you say you can reproduce this issue, you do explicitly mean the 1.0 branch (1.0.1 milestone), right?
I did not have this bug with Mozilla 1.0 release, only the 1.1 beta and forward to 2002073008 (if they are different)
Claudius, I am seeing this on the 7/29 branch build on Win2k.
I'm using WinXP.
Yes, this sounds like some kind of focus problem which is causing the bookmarks window controller to be whacked in an unusual way (commands still appear to be enabled in the UI, but they just don't do anything). I don't have a 1.0 branch tree, and I'm out of disk space on this machine. It'll be at least another day before I can get to this (as I have to set up my other machine with more disk space, pull a branch, build it, then debug).
Status: NEW → ASSIGNED
Certain bookmarks can be modified - all menus work at the top of the list (new folder, new separator, file bookmarks, properties, etc. Others can't. After the word separator, all menus are grayed out. There's no reason why the distinction, but a bookmark that is not editable or deletable can not be fixed. It can be copied, and the copy also will be not editable or deletable.
-> bryner
Assignee: ben → bryner
Status: ASSIGNED → NEW
This started happening between 6/19 (8AM) and 6/20 (4AM). By far the most suspicious checkin in that group is saari's checkin for bug 82534. I'll work with saari to try to figure out what's happening here.
Assignee: bryner → saari
taking back, I have a patch.
Assignee: saari → bryner
Whiteboard: [adt1 RTM] [ETA Needed] → [adt1 RTM] [ETA 8/6]
Attached patch quick patchSplinter Review
This needs some additional testing, but it should solve the problem. We weren't handling the SHOWMAXIMIZED message in nsWindow.cpp the same as SHOWNORMAL, and more importantly, there was a typo causing the maximize event to be treated as a minimize event.
Comment on attachment 94088 [details] [diff] [review] quick patch verbal r=saari, sr=jag on just the change to WebShellWindow, which seems to be all that is necessary.
Attachment #94088 - Flags: superreview+
Attachment #94088 - Flags: review+
Severity: normal → major
Keywords: adt1.0.1, approval
Priority: -- → P2
Whiteboard: [adt1 RTM] [ETA 8/6] → [adt1 RTM] [ETA 08/07]
Target Milestone: --- → mozilla1.0.1
Checked into the trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Blocks: 1.0.1
would the people who were seeing this bug on trunk(double-check your about: page) builds, give the builds with this fix a whirl and report back please? (buildID/OS). I will too but I was never able to repro so that can only count for so much. thanx.
Will this patch go into the 1.1 Branch?
Reporters: Pls let Claudius know if this patch fixes the problem on the trunk, so that we can verify this as fixed, and get it landed on the 1.0 branch in time for the 1.0.1 release. thanks!
I have Mozilla 1.1b Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1b) Gecko/20020805 build id 2002080508 and the bug is still there. Is this the version I should be testing????
I don't see this bug anymore in Trunk-Build 2002080604, running under W2K SP3. Confirming RESOLVED/FIXED.
I no longer see this problem with Win2k 080604 trunk.
Marking as verified per Comment #81 # 82. ADT/Drivers' - Can we get this on the 1.0 branch?
Keywords: adt1.0.1adt1.0.1+
Build 2002080604 Platform 2000 SR3 Good work people : ) Fully Maximized: Rename, Copy, Paste, Delete, File Bookmark... All seem to work okay : ) Thanks
works for me w2k sp2 build id: 2002080604 (sorry about previous post...)
Works for me, build 2002080604-TRUNK under Win98SE. Many thanks for the fix.
thanks Dimitrios that found the testcase!
Finally! I can now reliably reproduce this bug. I'm now waiting for a stable (ns) trunk build to verify the fix.
Comment on attachment 94088 [details] [diff] [review] quick patch a=asa (on behalf of drivers) for checkin to the 1.0 branch and the 1.1 branch.
Attachment #94088 - Flags: approval+
Marking as mozilla1.0.1+ per Comment #89 From Asa Dotzler.
Status: RESOLVED → VERIFIED
Checked in on the 1.0 branch. Will check in on the 1.1 branch when it opens.
That works for me to W2K sp3, build 2002080614, Mozilla 1.1b
Checked into the 1.1 branch as well, now that it's open.
In Build No 2002080718 the problem has been corrected. Please remove my name from the list. Thks
VERIFIED Fixed with 20020808 branch and trunk builds.
This is *not* fixed in build 2002080811 on WinNT 4. I still have to do the change-focused-window trick before I can rename folders, delete bookmarks, etc. Rob
Re #96 Never mind. NT adjusted the paths in my links to Mozilla when I renamed the folder containing an older build to "Mozilla.bak". When I double-clicked on the link on my desktop, I _thought_ I was starting the build I downloaded a half hour ago, when in reality I was starting my previous version. The build ID in the title bar is still listed as 2002080811, however ???
*** Bug 161924 has been marked as a duplicate of this bug. ***
No longer blocks: 159694
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: