Fix a typo that was causing bug 153828, inability to navigate bookmarks and history in a maximized window.  r=saari, sr=jag.